# hil-serl

./: .gitignore  pyproject.toml
bringup/: 06.sh  07.sh  08.sh  cmd.sh  install_infra.sh  pose.md  prepare_panda_desk.py  run_server.sh
examples/: export_classifier_data_video.py  preview_image_crops.py  record_demos.py  record_success_fail.py  train_bc.py  train_hgdagger.py  train_reward_classifier.py  train_rlpd.py
examples/experiments/: __init__.py  mappings.py
examples/experiments/workpiece_pickup/: config.py  run_actor.sh  run_crop_tool.sh  run_learner.sh  wrapper.py
serl_launcher/serl_launcher/networks/: reward_classifier.py
serl_launcher/serl_launcher/utils/: jax_compat.py  train_utils.py
serl_robot_infra/franka_env/: __init__.py
serl_robot_infra/franka_env/camera/: rs_capture.py
serl_robot_infra/franka_env/envs/: franka_env.py  franka_wrench_env.py  wrappers.py
serl_robot_infra/franka_env/spacemouse/: spacemouse_expert.py  spacemouse_test.py
serl_robot_infra/robot_servers/: franka_server.py
